# trackinglib

./: .clang-format  .clang-tidy  .gitignore  .kilorules  AGENTS.md  CMakeLists.txt  Dockerfile  DockerfileMac  Doxyfile  LICENSE  MATRIX_CODE_REVIEW.md  README.md  coverage_badge.sh  coverage_report.sh  dev-env.sh  main.cpp  main_matrix.cpp  setup.py
.devcontainer/: aliases.sh  devcontainer.json  setup.sh
base/: atomic_types.h  covariance_matrix_factored.h  covariance_matrix_full.h  diagonal_matrix.h  ensure_interface.h  matrix.h  point2d.h  square_matrix.h  state_mem.h  triangular_matrix.h  vector.h
cmake/: coverage.cmake  create_header_tests.cmake
coverage/: cmd_line  coverage-badge.json  index-sort-f.html  index-sort-l.html  index.html
doc/: info_architecture.md  info_filter_prediction.md  info_filter_update.md
docs/: _formulas.tex  _formulas_dark.tex  annotated.html  atomic__types_8h.html  atomic__types_8h__incl.map  atomic__types_8h__incl.md5  atomic__types_8h_source.html  bearing__observation__model_8h.html  bearing__observation__model_8h__incl.map  bearing__observation__model_8h__incl.md5  bearing__observation__model_8h_source.html  block__diagonal__matrix_8h.html  block__diagonal__matrix_8h_source.html  classes.html  classtracking_1_1base_1_1contract_1_1RejectCopyIntf-members.html  classtracking_1_1base_1_1contract_1_1RejectCopyIntf.html  classtracking_1_1base_1_1contract_1_1RejectMoveIntf-members.html  classtracking_1_1base_1_1contract_1_1RejectMoveIntf.html  classtracking_1_1base_1_1contract_1_1RequireAbstractIntf-members.html  classtracking_1_1base_1_1contract_1_1RequireAbstractIntf.html  classtracking_1_1base_1_1contract_1_1RequireAbstractIntf__inherit__graph.map  classtracking_1_1base_1_1contract_1_1RequireAbstractIntf__inherit__graph.md5  classtracking_1_1base_1_1contract_1_1RequireCopyIntf-members.html  classtracking_1_1base_1_1contract_1_1RequireCopyIntf.html  classtracking_1_1base_1_1contract_1_1RequireCopyIntf__inherit__graph.map  classtracking_1_1base_1_1contract_1_1RequireCopyIntf__inherit__graph.md5  classtracking_1_1base_1_1contract_1_1RequireMoveIntf-members.html  classtracking_1_1base_1_1contract_1_1RequireMoveIntf.html  classtracking_1_1base_1_1contract_1_1RequireMoveIntf__inherit__graph.map  classtracking_1_1base_1_1contract_1_1RequireMoveIntf__inherit__graph.md5  classtracking_1_1env_1_1EgoMotion-members.html  classtracking_1_1env_1_1EgoMotion.html  classtracking_1_1env_1_1EgoMotion__inherit__graph.map  classtracking_1_1env_1_1EgoMotion__inherit__graph.md5  classtracking_1_1env_1_1EgoMotion_a241a57ddc4cd1ab0d7daa7b157a7d8f9_cgraph.map  classtracking_1_1env_1_1EgoMotion_a241a57ddc4cd1ab0d7daa7b157a7d8f9_cgraph.md5  classtracking_1_1env_1_1EgoMotion_a253c2bb648180106b9d53f8fcde0be65_cgraph.map  classtracking_1_1env_1_1EgoMotion_a253c2bb648180106b9d53f8fcde0be65_cgraph.md5  classtracking_1_1env_1_1EgoMotion_a65b4febc155d69ae77c6a42f626bb2e3_icgraph.map  classtracking_1_1env_1_1EgoMotion_a65b4febc155d69ae77c6a42f626bb2e3_icgraph.md5  (+976 more)
env/: ego_motion.h
examples/: CMakeLists.txt  main.cpp  main_matrix.cpp  single_linear_object_tracking.cpp  single_nonlinear_figure8_object_tracking.cpp  single_nonlinear_object_tracking.cpp  single_object_tracking.cpp
examples/viz/: README.md  render.py
examples_libeigen/: CMakeLists.txt  main.cpp
filter/: information_filter.h  kalman_filter.h  unscented_kalman_filter.h
motion/: generic_predict.h  imotion_model.h  motion_model_cv.h
plans/: covariance_matrix_test_plan.md  cyclic_dependencies_analysis.md  cyclic_dependencies_resolution.md  ego_motion_udu_decomposition_plan.md  final_measurement_update_plan.md  fromlist_methods_refactoring_plan.md  github_documentation_coverage_plan.md  info_filter_prediction_flow.md  math_layer_documentation_and_test_coverage_analysis.md  math_layer_documentation_plan.md  math_layer_test_coverage_plan.md  matrix_base_refactoring_analysis.md  matrix_documentation_improvement_plan.md  matrix_other_refactoring_analysis.md  matrix_refactoring_analysis.md  matrix_template_parameter_refactoring.md  measurement_update_corrected_plan.md  measurement_update_improved_plan.md  motion_layer_initialization_strategy.md  my_measurement_update_plan.md  openmp_parallelization_analysis.md  openmp_removal_plan.md  print_methods_refactoring.md
python/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp  test_covariance_matrix_factored.cpp  test_covariance_matrix_full.cpp  test_diagonal_matrix.cpp  test_matrix_column_view.cpp  test_matrix_row_view.cpp  test_motion_model_ca.cpp  test_motion_model_cv.cpp  test_move_operator.cpp  test_point2d.cpp  test_rank1_update.cpp  test_square_matrix.cpp  test_state_mem.cpp  test_triangular_matrix.cpp
tests/env/: test_ego_motion.cpp
tests/math/: test_conversions.cpp  test_covariance_matrix_factored.cpp  test_covariance_matrix_full.cpp  test_diagonal_matrix.cpp  test_functions.cpp  test_matrix.cpp  test_matrix_column_view.cpp  test_matrix_integration.cpp  test_matrix_io.cpp  test_matrix_row_view.cpp  test_matrix_view.cpp  test_modified_gram_schmidt.cpp  test_point2d.cpp  test_point3d.cpp  test_rank1_update.cpp  test_rotation2d.cpp  test_square_matrix.cpp  test_square_matrix_decompositions.cpp  test_triangular_matrix.cpp  test_vector.cpp
tests/mocks/: motion_model_no_ego_motion.h  motion_model_no_ego_motion.hpp
tests/motion/: ca_kalman_filter_prediction_comparison.m  cv_kalman_filter_prediction_comparison.m  test_measurement_update.cpp  test_measurement_update_nonlinear.cpp  test_motion_model_ca.cpp  test_motion_model_cv.cpp  test_state_mem.cpp
tests/motion/mocks/: motion_model_no_ego_motion.hpp
tests/motion/reference/: ca_kalman_filter_prediction_comparison.m  cv_kalman_filter_prediction_comparison.m  thornton.m  udu_factorization.m  udui_rank1_noise.m
tests/observation/: test_bearing_observation_model.cpp  test_position_observation_model.cpp  test_range_bearing_doppler_observation_model.cpp  test_range_bearing_observation_model.cpp  test_range_observation_model.cpp  test_sensor_mounting_pose.cpp  test_velocity_observation_model.cpp
(+473 files in other folders)
